# Solar-System

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: CMakeLists.txt  CelestialBody.h  MilkyWay.h  SolarSystem.h  Window.h
src/: CMakeLists.txt  CelestialBody.cpp  GUI.cpp  MilkyWay.cpp  SolarSystem.cpp  Window.cpp  main.cpp
